# tools-cp-porousmat

./: .gitignore  .travis.yml  LICENSE  README.md  setup.cfg  setup.sh  tox.ini
conda/: environment.yml
docs/source/: api.rst  conf.py  index.rst
docs/source/autosummary/: cp_app.iter_together.rst
examples/: example_ML_training.ipynb  example_ML_training_250K.ipynb  example_predict.ipynb  example_predict_new_material.ipynb  example_predict_new_materials.ipynb
examples/cifs/: 16050N2.cif  18150N2.cif  AFI.cif  AFR.cif  RSM0304.cif  RSM0306.cif  RSM0321.cif  RSM0332.cif
examples/data/: cv_predictions_AFI.csv  cv_predictions_example1.csv  features_AFI.csv  features_example1.csv  structures_data.csv  test_structures.csv  train_structures.csv
src/cp_app/: __init__.py  descriptors.py  featurizer.py  generate_labels.py  phononfunctions.py  predictions.py  utils.py  versions.py
tests/: __init__.py  constants.py  f1.csv  f2.csv  test_utils.py
