[metadata]
name = cp_app
version = 0.0.1-dev
description = A package to predict heat capacity of porous materials
long_description = file: README.md

url = https://github.com/SeyedMohamadMoosavi/cpapp.git 

author = Seyed Mohamad Moosavi
author_email = s.moh.moosavi@gmail.com

licence = MIT
licence_file = LICENSE

classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.9
keywords = 
    MOFs
    Physical Properties

[options]
install_required = 
    requests
    click
    numpy
    pandas
    sphinx
    sphinx_rtd_theme
    
packages = find:
package_dir = 
    = src

[options.packages.find]
where = src